src/test/ui/cross-crate-macro-backtrace/main.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/main.rs:16:5
   |
16 |     myprintln!("{}"); //~ ERROR in this macro
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

